src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-43.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix,\n    \"%TAG ! tag:example.com,2000:app/\\n%TAG ! tag:example.com,2000:app2\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- token: tag_prefix
  stream: "tag:example.com,2000:app/"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 32
      line: 0
      column: 32
- token: break
  stream: "\n"
  span:
    start:
      index: 32
      line: 0
      column: 32
    end:
      index: 33
      line: 1
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 33
      line: 1
      column: 0
    end:
      index: 34
      line: 1
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 34
      line: 1
      column: 1
    end:
      index: 37
      line: 1
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 37
      line: 1
      column: 4
    end:
      index: 38
      line: 1
      column: 5
- token: tag_handle
  stream: "!"
  span:
    start:
      index: 38
      line: 1
      column: 5
    end:
      index: 39
      line: 1
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 39
      line: 1
      column: 6
    end:
      index: 40
      line: 1
      column: 7
- token: tag_prefix
  stream: "tag:example.com,2000:app2"
  span:
    start:
      index: 40
      line: 1
      column: 7
    end:
      index: 65
      line: 1
      column: 32
- severity: error
  message: "a tag directive for '!' has already been specified in this document"
  span:
    start:
      index: 38
      line: 1
      column: 5
    end:
      index: 39
      line: 1
      column: 6
  stream: "!"
- value:
    version: ~
    tags:
      "!": "tag:example.com,2000:app/"

