src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-47.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives,\n    \"%TAG !app! tag:example.com,2000:app/\\n%TAG !app! tag:example.com,2000:app2\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!app!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 10
      line: 0
      column: 10
- token: separator
  stream: " "
  span:
    start:
      index: 10
      line: 0
      column: 10
    end:
      index: 11
      line: 0
      column: 11
- token: tag_prefix
  stream: "tag:example.com,2000:app/"
  span:
    start:
      index: 11
      line: 0
      column: 11
    end:
      index: 36
      line: 0
      column: 36
- token: break
  stream: "\n"
  span:
    start:
      index: 36
      line: 0
      column: 36
    end:
      index: 37
      line: 1
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 37
      line: 1
      column: 0
    end:
      index: 38
      line: 1
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 38
      line: 1
      column: 1
    end:
      index: 41
      line: 1
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 41
      line: 1
      column: 4
    end:
      index: 42
      line: 1
      column: 5
- token: tag_handle
  stream: "!app!"
  span:
    start:
      index: 42
      line: 1
      column: 5
    end:
      index: 47
      line: 1
      column: 10
- token: separator
  stream: " "
  span:
    start:
      index: 47
      line: 1
      column: 10
    end:
      index: 48
      line: 1
      column: 11
- token: tag_prefix
  stream: "tag:example.com,2000:app2"
  span:
    start:
      index: 48
      line: 1
      column: 11
    end:
      index: 73
      line: 1
      column: 36
- severity: error
  message: "a tag directive for '!app!' has already been specified in this document"
  span:
    start:
      index: 42
      line: 1
      column: 5
    end:
      index: 47
      line: 1
      column: 10
  stream: "!app!"
- value:
    version: ~
    tags:
      "!app!": "tag:example.com,2000:app/"

