src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-8.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%TAG !f*\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: error
  stream: "!f*"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 8
      line: 0
      column: 8
- severity: error
  message: "expected an alphanumeric character (a-z, A-Z, 0-9, or '-'), but found '*'"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 0
      column: 8
  stream: "*"
- value:
    explicit: false
    version: ~
    tags: {}

