src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-9.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%TAG !f\\0\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: error
  stream: "!f\u0000"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 8
      line: 0
      column: 8
- severity: error
  message: "expected an alphanumeric character (a-z, A-Z, 0-9, or '-'), but found non-printable character '\\0'"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 0
      column: 8
  stream: "\u0000"
- value:
    version: ~
    tags: {}

