src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_directive-10.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%YAML 0.foo\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: 0.foo
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 11
      line: 0
      column: 11
- severity: error
  message: "expected a decimal digit (0-9), but found 'f'"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
  stream: f
- value:
    version: ~
    tags: {}

